# hackathon-starter-kit

./: .env.example  README.md  docker-compose.yml  justfile  setup.sh  setup_admin.sh  traefik.yml
compose/: backend.yml  frontend.yml  traefik.yml  tunnel.yml
services/backend/: .env.example  Dockerfile  README.md  justfile  main.py  models.py  pyproject.toml
services/backend/routes/: health.py  items.py
services/frontend/: Dockerfile  astro.config.mjs  justfile  package-lock.json  package.json  tailwind.config.ts
services/frontend/src/components/: Welcome.astro
services/frontend/src/components/welcome/: FeaturesSection.astro  Footer.astro  Header.astro  HeroSection.astro  HowItWorksSection.astro  QuickStartSection.astro  ReadyToBuildSection.astro  StatusSection.astro
services/frontend/src/layouts/: Layout.astro
